# QuaDRiGa-NG

./: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  README.md
quadriga_src/+qf/: csv_reader_rfc4180.m  interp.m
quadriga_src/@qd_arrayant/: beam_explorer.m  calc_beamwidth.m  calc_gain.m  combine_pattern.m  generate.m  interpolate.m  qd_arrayant.m  rotate_pattern.m  set_grid.m  visualize.m  visualize_pattern_geometry.m  xml_read.m  xml_write.m
quadriga_src/@qd_arrayant/private/: gen_arrayant_3gpp_macro.m  gen_arrayant_custom.m  gen_arrayant_parametric.m
quadriga_src/@qd_builder/: add_sdc.m  gen_ssf_parameters.m  get_channels.m  get_los_channels.m  get_pl.m  init_sos.m  write_conf_file.m
quadriga_src/@qd_channel/: copy.m  fr.m  hdf5_read.m  hdf5_write.m  interpolate.m  mat_load.m  mat_save.m  merge.m  qd_channel.m
quadriga_src/@qd_channel/private/: merge_coeff.m  parse_channel_names.m
quadriga_src/@qd_layout/: gen_o2i_loss.m  get_channels.m  get_channels_seg.m  kml2layout.m  layout2kml.m  power_map.m  qd_layout.m  set_pairing.m  set_scenario.m
quadriga_src/@qd_layout/private/: sort_channels.m
quadriga_src/@qd_mesh/: diff_trans.m  generate_index.m  intersect_mesh.m  qd_mesh.m  read_obj.m  read_par.m  read_stl.m  shift.m  simplify.m  split_objects.m  visualize.m  write_obj.m  write_par.m
quadriga_src/@qd_simulation_parameters/: qd_simulation_parameters.m
quadriga_src/@qd_sos/: acf_2d.m  acfi.m  val.m
quadriga_src/@qd_track/: calc_orientation.m  interpolate.m
tutorials/: t15_los_detection_and_diffraction.m
tutorials/madrid_grid/: madrid_grid_tri.mtl
